# energy_analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_Dagster  Dockerfile_Energy_Analyzer  Dockerfile_user_code  Makefile  README.md  config.py  dagster.yaml  data_models.py  db_connector.py  docker-compose-local-test.yaml  docker-compose.yaml  docker-compose_local.yaml  docker-compose_working_local.yaml  justfile  main.py  prefect.yaml  pushstq_messaging.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  setup.py  test.txt  workspace.yaml
.github/workflows/: Dockerfile  ci-cd.yml  github-actions-demo.yml
database/: db_connector.py  db_models.py
energy_analyzer/: __init__.py  app.py  main.py
energy_analyzer/database/: db_connector.py  db_models.py
energy_analyzer/octopus_data/: data_analysis.py  data_extract.py  data_handler.py  other_endpoints.py  tariffs_data_models.py  url_generator.py
energy_analyzer/solis_data/: solis_data.py
energy_analyzer/utils/: config.py  data_models.py  pushstq_messaging.py  utils.py
octopus_data/: data_analysis.py  data_extract.py  data_handler.py  data_process.py
octopus_data_extract/: data_extract.py
tmp1fhkck0n/history/: runs.db
tmp1fhkck0n/history/runs/: index.db
tmp1fhkck0n/schedules/: schedules.db
tmp2jr7epiu/history/: runs.db
tmp2jr7epiu/history/runs/: 6bcf162c-4370-437b-af02-932acd870a78.db  index.db
tmp2jr7epiu/schedules/: schedules.db
tmpqbgo2z2j/history/: runs.db
tmpqbgo2z2j/history/runs/: index.db
tmpqbgo2z2j/schedules/: schedules.db
