[tool.poetry]
name = "Energy Analyzer"
version = "0.1.0"
description = "Energy Analyzer for Octopus and Solis data."
authors = ["Piotr Koper"]
readme = "README.md"

[tool.poetry.dependencies]
# Core dependencies.
python = "^3.11"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.0.0"
prefect = "^2.14.8"


[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pre_commit = "^3.5.0"



[tool.ruff]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]

# Enable all `pydocstyle` "D" rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
# Enables isort "I" rules
select = ["D", "I"]
# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
